# Minimax_AI

./: CMakeLists.txt  README.md
config_file/: minimax_ai-config.cmake
include/: action.hpp  game.hpp  player.hpp  state.hpp
src/: action.cpp  game.cpp  player.cpp  state.cpp
